Prevent some (though not all) of the carousel loading jumpiness

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -473,6 +473,14 @@ td details, .paper details, details.small {
   }
 }
 
+.carousel {
+  display: none;
+
+  &.slick-initialized {
+    display: block;
+  }
+}
+
 .carousel__item {
   min-height: 10rem !important;
   position: relative;
